// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> should construct parsed-link and open it when clicked 1`] = `
<Link
  className=""
  href="/category/123"
>
  <div
    aria-hidden={true}
    className="css-c6ki83 "
    data-test-id="link: /category/123"
    onClick={[Function]}
    role="link"
  >
    <span>
      Test
    </span>
  </div>
</Link>
`;

exports[`<Link /> should render inner content of the link 1`] = `
<div
  aria-hidden={true}
  className="css-c6ki83 "
  data-test-id="link: /"
  onClick={[Function]}
  role="link"
>
  <span>
    Test
  </span>
</div>
`;
